some initial tidying up of code completed - more to do

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
                                 <!-- content goes here -->
                                 <form>
                                     <div class="form-group">
+                                        <div id="reg-error-msg"></div>
                                         <label for="exampleInputEmail1">Email address</label>
                                         <input type="email" class="form-control" id="registration-email-input" placeholder="Enter email">
                                     </div>
