--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                 </div>
                 <div class="col-md-6" id="video-zone">
                     <h3>
-                        <span class="glyphicon glyphicon-film"></span>
+                        <span class="glyphicon.glyphicon-film"></span>
                         Videos
                     </h3>
                     <section class="video-list">
@@ -194,7 +194,7 @@
         </div> <!--End of Recipe Shortlist Page -->
         <div class="detailed-view-page hide"> <!--Detailed View  Page -->
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-12">
                     <div class="well">
                         <div class="video-list" ></div>
                     </div>
