rearranged nav bar items

--- a/index.html
+++ b/index.html
@@ -53,15 +53,15 @@
                             </div>
                             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                                 <ul class="nav nav-pills">
-                                  <li class="active login-items" id="upgrade-from-guest"><a href="#">Upgrade Login</a></li>
-                                  <li  class="active login-items" id="password-reset"><a href="#">Reset Password</a></li>
-                                  <li class="active login-items" id="email-reset"><a href="#">Reset Email</a></li>
-                                  <li class="active login-items hide" id="show-homepage"><a href="#">Homepage</a></li>
+                                  <li class="login-items" id="upgrade-from-guest"><a href="#">Upgrade Login</a></li>
+                                  <li  class="login-items" id="password-reset"><a href="#">Reset Password</a></li>
+                                  <li class="login-items" id="email-reset"><a href="#">Reset Email</a></li>
+                                  <li class="login-items hide" id="show-homepage"><a href="#">Homepage</a></li>
+                                  <li class="login-items hide" id="google-maps"><a href="#">Google Maps</a></li>
                                   <li class="active login-items hide" id="navbar-logout-button"><a href="#">Logout</a></li>
-                                  <li class="active login-items hide" id="google-maps"><a href="#">Google Maps</a></li>
-                                  <li class="row text-center" id="userName">
 
                                 </ul>
+                                <div class="row text-center" id="userName"></div>
 
                                 <div class="input-group email-update">
                                     <span class="input-group-addon"><i class="glyphicon glyphicon-user email-update"></i></span>
@@ -110,7 +110,7 @@
     					Add ingredients to the list, and The Idiot Chef will generate recipe ideas for you! Full instructions and video tutorial links are included!
     				</h3>
                     <!-- <div class="panel panel-default"> -->
-                        <div class="row text-center" id="userName"></div>
+                        <!-- <div class="row text-center" id="userName"></div> -->
                     <!-- </div> -->
                 </div>
                 <div class="col-lg-2">
