repointed to old database

--- a/GoogleMapsLib.html
+++ b/GoogleMapsLib.html
@@ -84,14 +84,13 @@
     <script>
     // Initialize Firebase
     var config = {
-    apiKey: "AIzaSyASu2lz5VMPyQcFkLBdtjhDI7fBAtIlf2U",
-    authDomain: "project--4875216557722276856.firebaseapp.com",
-    databaseURL: "https://project--4875216557722276856.firebaseio.com",
-    storageBucket: "project--4875216557722276856.appspot.com",
-    messagingSenderId: "306080221352"
-    };
-    
-    firebase.initializeApp(config);
+        apiKey: "AIzaSyCfGxrkb9P3oYRWrQ5XL4wxNmpyv_x9VL0",
+        authDomain: "theidiotchef-149717.firebaseapp.com",
+        databaseURL: "https://theidiotchef-149717.firebaseio.com",
+        storageBucket: "theidiotchef-149717.appspot.com",
+        messagingSenderId: "963963795794"
+    }
+        firebase.initializeApp(config);
 
     var database = firebase.database();
     var storefolder = database.ref('/stores/');
