--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         height: 80%;
         width: 80%;
         margin-top: 5%;
-        margin-left: 5%;
+        margin-left: 10%;
         margin-right: 5%;
         margin-bottom: 1%;
 
@@ -175,7 +175,7 @@
                     </div>
                 </div>
                <!-- map link -->
-   <!--              <div class="col-lg-2">
+                <div class="col-lg-2">
                     <div class="row">
                         <div class="col-md-3"></div>
                          <div class="col-md-6">
@@ -185,7 +185,7 @@
                         </div>
                         <div class="col-md-3"></div>
                     </div>
-                </div>   -->  
+                </div>    
             </div>
             <div class="row">
                 <div class="col-md-3" id="ingredient-zone">
@@ -239,11 +239,18 @@
 
     </div>  <!-- end of container -->
     <!-- </div> -->
+    <div class="container map-page">
+        <h2 class="text-center panel" id="grocery-store">Find Your Nearest Grocery Store</h2>
+    </div>
     <div id="map" class="map-page"></div>
      <div class="map-page row">
+
+
             <div class="col-md-2"></div>
             <div class="col-md-8">
-                <div class="well">
+
+                <div class="well"> 
+                <button class="btn btn-default btn-success" id="close-map">Close Map</button>
                     <div><h3>Instructions</h3></div>
                     <ol>
                         <li>Allowing Geolocation the map will find your current location. </li>
@@ -257,17 +264,13 @@
                             <tbody></tbody>
                         </table>
                     </div>
+                    
                 </div>
             </div>
             <div class="col-md-2"></div>
+ 
         </div>
-        <div class="row">
-            <div class="col-md-2"></div>
-                <div class="col-md-8">
-
-                </div>
-            <div class="col-md-2"></div>
-        </div>
+    
     <footer class="footer">
         <div class="container">
             <a href="https://www.dominos.com/en/" target="_blank">
