--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- Bootstrap CDN-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link href="assets/styles/style.css" rel="stylesheet">
+    <script src="https://www.youtube.com/iframe_api"></script>
     <script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
     <script src="https://use.fontawesome.com/475b1e26ce.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Kalam|Pacifico" rel="stylesheet">
@@ -210,7 +211,13 @@
                         Videos
                     </h3>
                     <section class="video-list">
+
                         Click on a recipe title to view videos for that recipe!
+                            <div id="player0"></div>
+                    <div id="player1"></div>
+                    <div id="player2"></div>
+                    <div id="player3"></div>
+                    <div id="player4"></div>
                     </section>
                 </div>
             </div>
