TY fixed top result being too big

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <!-- body below navbar -->
         <div class="col-lg-2">
         </div>
-        <div class="col-lg-8 text-center">
+        <div id='topZone' class="col-lg-8 text-center">
             <h1>
 				The Idiot Chef
 			</h1>
@@ -170,7 +170,6 @@
                             <input type="text" class="form-control" id="ingredients-search">
                             <span class="input-group-btn">
     						<button id='addIngredientButton' class="btn btn-default" type="button">Add Ingredient</button>
-    						<button id='submitIngredientsButton' class="btn btn-default btn-success" type="button">Lets Get Cooking!</button>
     						</span>
                         </div>
                     </div>
@@ -196,6 +195,7 @@
                     </h3>
                     <section id="ingredients-list">
                     </section>
+                    <button id='submitIngredientsButton' class="btn btn-default btn-success" type="button">Lets Get Cooking!</button>
                 </div>
                 <div class="col-md-3" id="recipe-zone">
                     <h3>
