--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <div class="row">
                 <div class="col-lg-2">
                 </div>
-                <div class="col-lg-8">
+                <div class="col-lg-12">
                     <div class="form-group">
                         <div class="input-group">
                             <input type="text" class="form-control" id="ingredients-search">
@@ -174,30 +174,27 @@
                         </div>
                     </div>
                 </div>
-               <!-- map link -->
-                <div class="col-lg-2">
-                    <div class="row">
-                        <div class="col-md-3"></div>
-                         <div class="col-md-6">
-                            <div class="well map-well">
-                                <p>Missing Ingredients? Click on the <strong>Map</strong> button to do a search for open grocery stores nearby.  <button class="btn btn-default btn-success" id="open-map">Map</button></p> 
-                            </div>
-                        </div>
-                        <div class="col-md-3"></div>
-                    </div>
-                </div>    
             </div>
             <div class="row">
-                <div class="col-md-3" id="ingredient-zone">
+                <div class="col-md-6" id="ingredient-zone">
                     <h3>
                         <span class="glyphicon glyphicon-leaf"></span>
                         Your ingredients
                     </h3>
                     <section id="ingredients-list">
                     </section>
-                    <button id='submitIngredientsButton' class="btn btn-default btn-success" type="button">Lets Get Cooking!</button>
+                    <button id='submitIngredientsButton' class="btn btn-success" type="button">Lets Get Cooking!</button>
                 </div>
-                <div class="col-md-3" id="recipe-zone">
+                <div class="row">
+<!--                         <div class="col-md-3"></div> -->
+                         <div class="col-md-6">
+                            <div class="well map-well">
+                                <p>Missing Ingredients? Click on the <strong>Map</strong> button to do a search for open grocery stores nearby.  <button class="btn btn-default btn-success" id="open-map">Map</button></p> 
+                            </div>
+                        </div>
+                        <!-- <div class="col-md-3"></div> -->
+                    </div>
+<!--                 <div class="col-md-3" id="recipe-zone">
                     <h3>
                         <span class="glyphicon glyphicon-list-alt"></span>
                         Recipes
@@ -219,7 +216,7 @@
                     <div id="player3"></div>
                     <div id="player4"></div>
                     </section>
-                </div>
+                </div> -->
             </div>
         </div> <!-- End of Home Page -->
 
