--- a/index.html
+++ b/index.html
@@ -164,15 +164,13 @@
             <div class="row">
                 <div class="col-lg-2">
                 </div>
-                <div class="col-lg-12">
-                    <div class="form-group">
+                <div class="col-lg-12 form-group">
                         <div class="input-group">
                             <input type="text" class="form-control" id="ingredients-search">
                             <span class="input-group-btn">
     						<button id='addIngredientButton' class="btn btn-default" type="button">Add Ingredient</button>
     						</span>
                         </div>
-                    </div>
                 </div>
             </div>
             <div class="row">
