--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 <!--                         <div class="col-md-3"></div> -->
                          <div class="col-md-6">
                             <div class="well map-well">
-                                <p>Missing Ingredients? Click on the <strong>Map</strong> button to do a search for open grocery stores nearby.  <button class="btn btn-default btn-success" id="open-map">Map</button></p> 
+                                <p>Missing Ingredients? Click on the <strong>Map</strong> button to do a search for open grocery stores nearby.  <button class="btn btn-default btn-success" id="open-map"><i class="fa fa-map-o" aria-hidden="true"></i>   Map</button></p> 
                             </div>
                         </div>
                         <!-- <div class="col-md-3"></div> -->
