--- a/index.html
+++ b/index.html
@@ -225,14 +225,14 @@
         </div> <!--End of Recipe Shortlist Page -->
         <div class="detailed-view-page hide"> <!--Detailed View  Page -->
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-md-4">
                     <div class="well">
                         <div class="video-list" ></div>
                     </div>
                 </div> <!--  youtube -->
                 <div class="col-md-8">
                     <div class="well">
-                        <div id="recipe-list"></div>
+                        <div id="recipe-details" class="recipe-details-well"></div>
                     </div>
                 </div>
             </div>
