added detailed recipe page

--- a/index.html
+++ b/index.html
@@ -119,23 +119,26 @@
         </div>
         <!-- </div> -->
         <!-- body below navbar -->
-        <div class="col-lg-2">
-        </div>
-        <div id='topZone' class="col-lg-8 text-center">
-            <h1>
-				The Idiot Chef
-			</h1>
-            <h3 id="description">
-				Add ingredients to the list, and The Idiot Chef will generate recipe ideas for you! Full instructions and video tutorial links are included!
-			</h3>
-            <!-- <div class="panel panel-default"> -->
-                <!-- <div class="row text-center" id="userName"></div> -->
-            <!-- </div> -->
-        </div>
-        <div class="col-lg-2">
-        </div>
+
         <!-- end of body below Navbar -->
         <!-- Landing Page -->
+        <div class="row">
+            <div class="col-md-2">
+            </div>
+            <div id='topZone' class="col-lg-8 text-center">
+                <h1>
+                    The Idiot Chef
+                </h1>
+                <h3 id="description">
+                    Add ingredients to the list, and The Idiot Chef will generate recipe ideas for you! Full instructions and video tutorial links are included!
+                </h3>
+                <!-- <div class="panel panel-default"> -->
+                    <!-- <div class="row text-center" id="userName"></div> -->
+                <!-- </div> -->
+            </div>
+            <div class="col-md-2">
+            </div>
+        </div>
         <div class="row text-center landing-page">
             <div class="col-xs-12 col-md-4 well login-well landing-page">
                 <button type="button" class="btn login-items initial-login" id="register"><a href="">Register</a></button>
