move back to recipe button

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
             
         </div> <!--End of Detailed View  Page -->
         <div class="expand-video-page hide">
-            <div class="panel expand-video-page hide" id='expand-video-panel'></div>
+            <div class="panel" id='expand-video-panel'></div>
         </div>
     </div>  <!-- end of container -->
     <div class="container map-page">
