--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>The Idiot Chef</title>
     <meta name="viewport" content="initial-scale=1.0">
-    <link rel='shortcut icon' href='favicon_tic.ico' type='image/x-icon'/ >
+    <link rel='shortcut icon' href='assets/images/favicon_tic.ico' type='image/x-icon'/ >
     <!-- Bootstrap CDN-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link href="assets/styles/style.css" rel="stylesheet">
