--- a/index.html
+++ b/index.html
@@ -278,8 +278,11 @@
         </a>
         </div>
     </footer>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAddiqSupF7BhNzmafgwWImSllcV_zGv7c&libraries=places&callback=initMap"
-    async defer></script>
+    <!-- for heroku - need to add namespace --> -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAddiqSupF7BhNzmafgwWImSllcV_zGv7c&libraries=places&callback=stormy-retreat-65982.herokuapp.com.initMap" async defer></script>
+
+<!--  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAddiqSupF7BhNzmafgwWImSllcV_zGv7c&libraries=places&callback=initMap" 
+    async defer></script> -->
     <script src="assets/javascript/main-app.js"></script>
     
 </body>
